no bootstrap, custom css

--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Check votes</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="./css/main.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Sansita" rel="stylesheet"/>
-    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdn.steemjs.com/lib/latest/steem.min.js"></script>
   </head>
   <body>
     <div class="container">
       <div class="header">
         <div class="title">Check votes</div>
-        <div class="description">By <a href="https://steemit.com/@jga/">@jga</a></div>
+        <div class="description">See which curators support your posts most often. By <a href="https://steemit.com/@jga/">@jga</a></div>
       </div>            
       <div class="form">
+        <div class="form-description">Put the links of the posts</div>
         <div class="divtextarea">
            <textarea rows="5" cols="50" id="posts" class="textarea"></textarea>
         </div>
